feat: add isTrash setting
